Mongo friendly, I promise

--- a/app/views/distributed_healths/_form.html.erb
+++ b/app/views/distributed_healths/_form.html.erb
@@ -20,20 +20,16 @@
     <%= f.text_field :chlorine %>
   </div>
   <div class="field">
-    <%= f.label :ph %><br>
-    <%= f.text_field :ph %>
-  </div>
-  <div class="field">
-    <%= f.label :magnified %><br>
-    <%= f.text_field :magnified %>
+    <%= f.label :magnified_Link %><br>
+    <%= f.text_field :magnified_Link %>
   </div>
   <div class="field">
     <%= f.label :taste %><br>
-    <%= f.text_area :taste %>
+    <%= f.text_field :taste %>
   </div>
   <div class="field">
     <%= f.label :odor %><br>
-    <%= f.text_area :odor %>
+    <%= f.text_field :odor %>
   </div>
   <div class="field">
     <%= f.label :temperature %><br>
