--- a/app/views/distributed_healths/index.html.erb
+++ b/app/views/distributed_healths/index.html.erb
@@ -7,8 +7,7 @@
     <tr>
       <th>Ph</th>
       <th>Chlorine</th>
-      <th>Ph</th>
-      <th>Magnified</th>
+      <th>Magnified Link</th>
       <th>Taste</th>
       <th>Odor</th>
       <th>Temperature</th>
@@ -25,8 +24,7 @@
       <tr>
         <td><%= distributed_health.ph %></td>
         <td><%= distributed_health.chlorine %></td>
-        <td><%= distributed_health.ph %></td>
-        <td><%= distributed_health.magnified %></td>
+        <td><%= distributed_health.magnified_Link %></td>
         <td><%= distributed_health.taste %></td>
         <td><%= distributed_health.odor %></td>
         <td><%= distributed_health.temperature %></td>
