--- a/app/views/distributed_healths/show.html.erb
+++ b/app/views/distributed_healths/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Magnified:</strong>
-  <%= @distributed_health.magnified %>
+  <strong>Magnified Link:</strong>
+  <%= @distributed_health.magnified_Link %>
 </p>
 
 <p>
