Added timestamp & testdata checker

--- a/app/views/distributed_healths/_form.html.erb
+++ b/app/views/distributed_healths/_form.html.erb
@@ -51,6 +51,14 @@
     <%= f.label :long %><br>
     <%= f.text_field :long %>
   </div>
+    <div class="field">
+    <%= f.label :timestamp %><br>
+    <%= f.text_field :timestamp %>
+  </div>
+  <div class="field">
+    <%= f.label :testdata %> <br />
+    <%= f.check_box :testdata %> <br />
+</div>
   <div class="actions">
     <%= f.submit %>
   </div>
