--- a/app/views/distributed_healths/show.html.erb
+++ b/app/views/distributed_healths/show.html.erb
@@ -54,6 +54,14 @@
   <strong>Long:</strong>
   <%= @distributed_health.long %>
 </p>
+<p>
+  <strong>Timestamp:</strong>
+  <%= @distributed_health.timestamp %>
+</p>
+<p>
+  <strong>Testdata:</strong>
+  <%= @distributed_health.testdata %>
+</p>
 
 <%= link_to 'Edit', edit_distributed_health_path(@distributed_health) %> |
 <%= link_to 'Back', distributed_healths_path %>
