Added field for Android Device ID

--- a/app/views/distributed_healths/_form.html.erb
+++ b/app/views/distributed_healths/_form.html.erb
@@ -59,6 +59,10 @@
     <%= f.label :testdata %> <br />
     <%= f.check_box :testdata %> <br />
 </div>
+<div class="field">
+    <%= f.label :deviceID %><br>
+    <%= f.text_field :deviceID %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
