--- a/app/views/distributed_healths/index.html.erb
+++ b/app/views/distributed_healths/index.html.erb
@@ -17,6 +17,7 @@
       <th>Long</th>
       <th>Timestamp</th>
       <th>Test Data?</th>
+      <th>Device ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -36,6 +37,7 @@
         <td><%= distributed_health.long %></td>
         <td><%= distributed_health.timestamp %></td>
         <td><%= distributed_health.testdata %></td>
+        <td><%= distributed_health.deviceID %></td>
         <td><%= link_to 'Show', distributed_health %></td>
         <td><%= link_to 'Edit', edit_distributed_health_path(distributed_health) %></td>
         <td><%= link_to 'Destroy', distributed_health, method: :delete, data: { confirm: 'Are you sure?' } %></td>
