--- a/app/views/distributed_healths/show.html.erb
+++ b/app/views/distributed_healths/show.html.erb
@@ -62,6 +62,11 @@
   <strong>Testdata:</strong>
   <%= @distributed_health.testdata %>
 </p>
+<p>
+  <strong>Device ID:</strong>
+  <%= @distributed_health.deviceID %>
+</p>
+
 
 <%= link_to 'Edit', edit_distributed_health_path(@distributed_health) %> |
 <%= link_to 'Back', distributed_healths_path %>
